<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="mainViewModel"
            type="com.example.viewmodel.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/logo42"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="132dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={mainViewModel.login}"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.button.MaterialButton
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="@{() -> mainViewModel.searchButtonClicked()}"
                    android:text="@android:string/search_go" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</layout>